--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Frankie Cancino</title>
+		<title>Candy Tiu</title>
 		<link rel="icon" type="image/png" href="Favicon.jpg">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,15 +11,6 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136318532-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-136318532-1');
-		</script>
 	</head>
 	<body class="is-loading">
 		<div id="flex-container">
@@ -29,7 +20,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpeg" alt="" /></span>
-							<h1>Frankie Cancino</h1>
+							<h1>Candy Tiu</h1>
 							<h3>Target - Minneapolis, MN</h3>
 							<p>Data Scientist</p>
 							<p>Grad Student - University of Minnesota</p>
@@ -49,7 +40,7 @@
 						<hr />
 							<h3>Code</h3>
 							<ul class="actions">
-								<li><a href="https://github.com/frankiecancino" target="_blank" class="fab fa-github fa-5x"></a></li>
+								<li><a href="https://github.com/candytiu" target="_blank" class="fab fa-github fa-5x"></a></li>
 								<li><a href="https://github.com/target/matrixprofile-ts" target="_blank" class="fa fa-dot-circle-o fa-5x"></a></li>
 							</ul>
 						<hr />
@@ -72,7 +63,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Frankie Cancino</li>
+							<li>&copy; Candy Tiu</li>
 						</ul>
 					</footer>
 
