--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Candy Tiu</title>
-		<link rel="icon" type="image/png" href="Favicon.jpg">
+		<link rel="icon" type="image/png" href="Favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
   		<link href="fontawesome/css/fontawesome-all.css" rel="stylesheet">
@@ -21,10 +21,9 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpeg" alt="" /></span>
 							<h1>Candy Tiu</h1>
-							<h3>Target - Minneapolis, MN</h3>
-							<p>Data Scientist</p>
-							<p>Grad Student - University of Minnesota</p>
-							<p>Organizer & Founder - Data Science Minneapolis</p>
+							<h3>Long Term Care Group - Eden Prairie, MN</h3>
+							<p>Financial Analyst</p>
+							<p>Co-Organizer - Data Science Minneapolis</p>
 						</header>
 						<hr />
 							<ul class="actions">
@@ -33,15 +32,13 @@
 						<hr />
 							<h3>Articles</h3>
 							<ul class="actions">
-								<li><a href="https://medium.com/@frankiecancino" target="_blank" class="fab fa-medium fa-5x"></a></li>
-								<li><a href="https://tech.target.com/2019/04/19/MIPS-analytics-template.html" target="_blank" class="fa fa-dot-circle-o fa-5x"></a></li>
-								<li><a href="https://tech.target.com/data%20science/2018/07/02/iterative-data-science.html" target="_blank" class="fa fa-dot-circle-o fa-5x"></a></li>
+								<li><a href="https://https://medium.com/@candytiu" target="_blank" class="fab fa-medium fa-5x"></a></li>
+						
 							</ul>
 						<hr />
 							<h3>Code</h3>
 							<ul class="actions">
 								<li><a href="https://github.com/candytiu" target="_blank" class="fab fa-github fa-5x"></a></li>
-								<li><a href="https://github.com/target/matrixprofile-ts" target="_blank" class="fa fa-dot-circle-o fa-5x"></a></li>
 							</ul>
 						<hr />
 							<h3>Data Science Minneapolis</h3>
@@ -52,10 +49,10 @@
 						<h3>Contact</h3>
 						<footer>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/frankie-cancino" target="_blank" class="fa fa-linkedin"></a></li>
-								<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=frankiecancino@gmail.com" target="_blank" class="fa fa-google"></a></li>
-								<li><a href="https://twitter.com/frankiecancino" target="_blank" class="fa fa-twitter"></a></li>
-								<li><a href="https://www.instagram.com/frankie.cancino/" target="_blank" class="fa fa-instagram"></a></li>
+								<li><a href="https://www.linkedin.com/in/candy-tiu" target="_blank" class="fa fa-linkedin"></a></li>
+								<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=candy.k.tiu@gmail.com" target="_blank" class="fa fa-google"></a></li>
+								<li><a href="https://twitter.com/candyk_tiu" target="_blank" class="fa fa-twitter"></a></li>
+								<li><a href="https://www.instagram.com/candy_tiu/" target="_blank" class="fa fa-instagram"></a></li>
 							</ul>
 						</footer>
 					</section>
