--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -19,7 +19,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpeg" alt="" /></span>
+							<span class="avatar"><img src="images/avatar.jpeg border="1" height="64" width="64"" alt="" /></span>
 							<h1>Candy Tiu</h1>
 							<h3>Long Term Care Group - Eden Prairie, MN</h3>
 							<p>Financial Analyst</p>
