--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -2,6 +2,9 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-image: url("image/png");
+          background-repeat:no-repeat;
+          background-size:cover;
 }
 
 main {
