--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -21,8 +21,8 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.png" height="240" width="240" alt="" /></span>
 							<h1>Candy Tiu</h1>
-							<h3>Long Term Care Group - Eden Prairie, MN</h3>
-							<p>Financial Analyst</p>
+							<h3>Sephora USA - San Francisco, CA</h3>
+							<p>Portofoli Analyst</p>
 							<p>Co-Organizer - Data Science Minneapolis</p>
 						</header>
 						<hr />
