--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -22,7 +22,7 @@
 							<span class="avatar"><img src="images/avatar.png" height="240" width="240" alt="" /></span>
 							<h1>Candy Tiu</h1>
 							<h3>Sephora USA - San Francisco, CA</h3>
-							<p>Portofoli Analyst</p>
+							<p>Portofolio Analyst</p>
 							<p>Co-Organizer - Data Science Minneapolis</p>
 						</header>
 						<hr />
@@ -32,7 +32,7 @@
 						<hr />
 							<h3>Articles</h3>
 							<ul class="actions">
-								<li><a href="https://https://medium.com/@candytiu" target="_blank" class="fab fa-medium fa-5x"></a></li>
+								<li><a href="https://medium.com/@candytiu" target="_blank" class="fab fa-medium fa-5x"></a></li>
 						
 							</ul>
 						<hr />
@@ -51,7 +51,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/candy-tiu" target="_blank" class="fa fa-linkedin"></a></li>
 								<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=candy.k.tiu@gmail.com" target="_blank" class="fa fa-google"></a></li>
-								<li><a href="https://twitter.com/candyk_tiu" target="_blank" class="fa fa-twitter"></a></li>
+								<li><a href="https://twitter.com/candykay_2" target="_blank" class="fa fa-twitter"></a></li>
 								<li><a href="https://www.instagram.com/candy_tiu/" target="_blank" class="fa fa-instagram"></a></li>
 							</ul>
 						</footer>
